--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@tanstack/react-query": "^5.17.9",
     "aes256": "^1.1.0",
     "aos": "^2.3.4",
     "axios": "^1.6.0",
